# meridian-financial-planning

./: .firebaserc  .gitignore  .npmrc  CLAUDE.md  DEPLOY.md  Makefile  PYTHON_314_UPGRADE.md  QA_FINDINGS.md  README.md  TESTING_GAPS.md  cleanup-policy.json  cloudbuild.yaml  dev.ps1  firebase.json  package-lock.json  package.json
.github/: dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_plan_invites.py  0003_tax_configs.py  0004_bequests.py  0005_state_pension_escalation_rate.py  0006_asset_contributions.py  0007_asset_pct_gross_income.py  0008_asset_avc.py  0009_filing_status_and_rent_credit.py  0010_person_lump_sum_pct.py  0011_person_prsi_weeks.py  0012_children.py  0013_liability_monthly_overpayment.py  0014_person_arf_target_drawdown.py  0015_person_pension_option.py  0015_plan_onboarding_complete.py  0016_merge_pension_onboarding_heads.py  0017_liability_adjustments.py  0018_asset_property_transactions.py  0019_asset_linked_liability_costs.py  0020_income_is_bonus.py  0021_benefits.py  0022_child_costs.py  0023_fk_indexes.py  0024_consolidate_goal_kinds.py  0025_drop_legacy_exp_cat.py  0025_drop_legacy_expense_category.py  0026_asset_charge.py  0026_protection.py  0027_users_email_unique.py  0028_merge_heads_merge_asset_charge_protection_heads.py  0029_db_pensions.py  0030_rental_income.py  0031_arf_band_fill.py  0032_trim_discretionary.py
backend/app/: auth.py  db.py  main.py
backend/app/config/: tax_ie_2026.py
backend/app/engine/: bik_ie.py  cat_ie.py  liquidation.py  loss_capacity.py  montecarlo.py  pension_ie.py  scenario.py  simulator.py  tax_config.py  tax_ie.py
backend/app/models/: __init__.py
backend/app/routers/: _helpers.py  assets.py  assumptions.py  benefits.py  bequests.py  children.py  db_pensions.py  expenses.py  goals.py  income.py  invites.py  liabilities.py  life_policies.py  members.py  people.py  plans.py  projections.py  scenarios.py  tax_configs.py
backend/app/schemas/: asset.py  assumptions.py  benefit.py  bequest.py  child.py  db_pension.py  expense.py  goal.py  income.py  liability.py  life_policy.py  person.py  plan.py  projection.py  scenario.py  sharing.py  tax_config.py
backend/app/services/: serialisation.py
backend/app/tests/: _authz_helpers.py  conftest.py  test_assets.py  test_assumptions.py  test_auth.py  test_bik.py  test_cat_estate.py  test_child_benefit.py  test_child_costs.py  test_db_indexes.py  test_db_pension.py  test_disposal_tax.py  test_drawdown.py  test_engine_edge_cases.py  test_expenses.py  test_goals.py  test_income.py  test_invites_members.py  test_liabilities.py  test_loss_capacity.py  test_mc_cache.py  test_montecarlo.py  test_needs_wants.py  test_pension.py  test_pension_ie.py  test_people.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_plan_io.py  test_plan_settings.py  test_property_transactions.py  (+12 more)
frontend/: .env.example  .npmrc  (+5 more)
(+79 files in other folders)
