[project]
name = "meridian-backend"
version = "0.7.0"
description = "Meridian — financial planning API (Ireland 2026 tax engine)"
requires-python = ">=3.14"
# Direct deps are pinned exactly (==) to a known-good version. This is a
# supply-chain hardening measure: an unannounced patch release of any
# transitive dep can still ship in seconds via Dependabot review, but a
# silent registry hijack of a direct dep cannot pull in arbitrary new
# code on the next `pip install`. Upgrade process: bump the pin, run
# `pytest` + `pip-audit`, PR. See DEPLOY.md §"Supply-chain policy".
dependencies = [
    "fastapi==0.136.1",
    # Plain uvicorn (not [standard]): the speed extras uvloop/httptools have no
    # cp314 wheels yet, so they'd break the python:3.14-slim build (no toolchain
    # to source-compile). Plain uvicorn is pure-Python (asyncio loop + h11) and
    # plenty for this Cloud Run service. Re-add the [standard] extra once uvloop
    # and httptools publish cp314 wheels — it's a one-line revert.
    "uvicorn==0.46.0",
    "sqlalchemy==2.0.49",
    "pydantic==2.13.4",
    "alembic==1.18.4",
    "python-dateutil==2.9.0.post0",
    "firebase-admin==7.4.0",
    # psycopg (v3) for production Postgres on Cloud SQL. Local dev still uses SQLite.
    "psycopg[binary]==3.3.4",
    "email-validator==2.3.0",
    # Transitive security pin: urllib3 <2.7.0 has CVE-2026-44431 and -44432.
    # Pulled in via requests / google-auth / firebase-admin. Drop this entry
    # once firebase-admin's bottom pin clears 2.7.
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "httpx==0.28.1",
    "ruff==0.15.12",
    "pip-audit==2.10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
